Update Website Pages “home_page_information”

--- a/_data/pages/home.yml
+++ b/_data/pages/home.yml
@@ -83,6 +83,12 @@ block_5:
     - icon: /assets/images/upload/40105.png
       text: ''
       title: Engineering
+    - icon: /assets/images/upload/img_561215.png
+      title: Certificate
+    - icon: /assets/images/upload/icons8-windows-8-programming-software-box.ico
+      title: IT & Software
+    - icon: /assets/images/upload/1473237-200.png
+      title: Blockchain and Crypto
   text: >-
     We have translators with specific domain expertise, skills, background, and
     understanding so your <br/>projects are handled by the most relevant
