Update Website Pages “home_page_information”

--- a/_data/pages/home.yml
+++ b/_data/pages/home.yml
@@ -89,6 +89,18 @@ block_5:
       title: IT & Software
     - icon: /assets/images/upload/1473237-200.png
       title: Blockchain and Crypto
+    - icon: /assets/images/upload/65687.png
+      title: Mobile & Video Game
+    - icon: /assets/images/upload/img_146257.png
+      title: 'Retail '
+    - icon: /assets/images/upload/marketing-icon.png
+      title: Marketing
+    - icon: /assets/images/upload/57589.png
+      title: E - Commerce
+    - icon: /assets/images/upload/1534390-200.png
+      title: Manufacturing
+    - icon: /assets/images/upload/more-512.png
+      title: Much More
   text: >-
     We have translators with specific domain expertise, skills, background, and
     understanding so your <br/>projects are handled by the most relevant
