--- a/_data/pages/home.yml
+++ b/_data/pages/home.yml
@@ -33,7 +33,7 @@ block_2:
       title: Proofreading Services
   text: ''
   title: OUR COURCE SERVICES
-  visible: true
+  visible: false
 block_3:
   background_image: ''
   color_overlay: 'rgba(50, 50, 50, 0)'
