--- a/_data/pages/legal.yml
+++ b/_data/pages/legal.yml
@@ -1,58 +1,92 @@
 block_1:
-  visible: true
-  background_image: '/assets/images/upload/hand_punch.jpg'
+  background_image: /assets/images/upload/d923dbbf84f549bb2d91ba8cf91461a8.jpg
   color_overlay: 'rgba(50, 50, 50, 0.5)'
-  title: 'Expert Translation Services'
-  text: 'Get access to international markets with fast and accurate translation services at the most affordable rates'
-
+  text: >-
+    Get access to international markets with fast and accurate translation
+    services at the most affordable rates
+  title: Expert Translation Services
+  visible: true
 block_2:
-  visible: true
   background_image: ''
   color_overlay: 'rgba(50, 50, 50, 0)'
-  title: 'Why Choose Mars?'
-  text: 'Enable globalization for your business with our excellent quality of translation services at cost-effective rates.'
   items:
-    - icon: '/assets/images/upload/recommended.png'
-      title: 'Certified Linguists'
-      text: 'Not only are our experts adept at handling lengthy translations, they also execute them in due time and fast turnarounds'
-    - icon: '/assets/images/upload/recommended.png'
-      title: 'Excellent Quality'
-      text: 'Our translation platform features quality re-assessments and checks to ensure consistent and top-quality of services'
-    - icon: '/assets/images/upload/recommended.png'
-      title: 'Affordable Rates'
-      text: 'Our transparent and affordable translation rates are the lowest among competitors with no extra or hidden charges'
-    - icon: '/assets/images/upload/recommended.png'
-      title: 'Fast Turnaround'
-      text: 'Our translation platform is equipped to process translation projects of high volume and technical nature, ensuring quick turnaround'
-    - icon: '/assets/images/upload/recommended.png'
-      title: 'Translation Memory'
-      text: 'Our translation memory matches segments which have previously been translated, so you are spared the hassle of paying twice.'
-    - icon: '/assets/images/upload/recommended.png'
-      title: 'Multilingual Support'
-      text: 'We offer translation services for a plethora of language pairs from around the globe for a multilingual support system.'
-
+    - icon: /assets/images/upload/recommended.png
+      text: >-
+        Not only are our experts adept at handling lengthy translations, they
+        also execute them in due time and fast turnarounds
+      title: Certified Linguists
+    - icon: /assets/images/upload/recommended.png
+      text: >-
+        Our translation platform features quality re-assessments and checks to
+        ensure consistent and top-quality of services
+      title: Excellent Quality
+    - icon: /assets/images/upload/recommended.png
+      text: >-
+        Our transparent and affordable translation rates are the lowest among
+        competitors with no extra or hidden charges
+      title: Affordable Rates
+    - icon: /assets/images/upload/recommended.png
+      text: >-
+        Our translation platform is equipped to process translation projects of
+        high volume and technical nature, ensuring quick turnaround
+      title: Fast Turnaround
+    - icon: /assets/images/upload/recommended.png
+      text: >-
+        Our translation memory matches segments which have previously been
+        translated, so you are spared the hassle of paying twice.
+      title: Translation Memory
+    - icon: /assets/images/upload/recommended.png
+      text: >-
+        We offer translation services for a plethora of language pairs from
+        around the globe for a multilingual support system.
+      title: Multilingual Support
+  text: >-
+    Enable globalization for your business with our excellent quality of
+    translation services at cost-effective rates.
+  title: Why Choose Mars?
+  visible: true
 block_3:
-  visible: true
   background_image: ''
   color_overlay: 'rgba(50, 50, 50, 0)'
-  title: 'Why Choose Mars?'
-  text: 'Enable globalization for your business with our excellent quality of translation services at cost-effective rates.'
   items:
-    - icon: '/assets/images/upload/recommended.png'
-      title: 'Certified Linguists'
-      text: 'Not only are our experts adept at handling lengthy translations, they also execute them in due time and fast turnarounds'
-    - icon: '/assets/images/upload/recommended.png'
-      title: 'Excellent Quality'
-      text: 'Our translation platform features quality re-assessments and checks to ensure consistent and top-quality of services'
-    - icon: '/assets/images/upload/recommended.png'
-      title: 'Affordable Rates'
-      text: 'Our transparent and affordable translation rates are the lowest among competitors with no extra or hidden charges'
-    - icon: '/assets/images/upload/recommended.png'
-      title: 'Fast Turnaround'
-      text: 'Our translation platform is equipped to process translation projects of high volume and technical nature, ensuring quick turnaround'
-    - icon: '/assets/images/upload/recommended.png'
-      title: 'Translation Memory'
-      text: 'Our translation memory matches segments which have previously been translated, so you are spared the hassle of paying twice.'
-    - icon: '/assets/images/upload/recommended.png'
-      title: 'Multilingual Support'
-      text: 'We offer translation services for a plethora of language pairs from around the globe for a multilingual support system.'
+    - icon: /assets/images/upload/recommended.png
+      text: >-
+        Not only are our experts adept at handling lengthy translations, they
+        also execute them in due time and fast turnarounds
+      title: Certified Linguists
+    - icon: /assets/images/upload/recommended.png
+      text: >-
+        Our translation platform features quality re-assessments and checks to
+        ensure consistent and top-quality of services
+      title: Excellent Quality
+    - icon: /assets/images/upload/recommended.png
+      text: >-
+        Our transparent and affordable translation rates are the lowest among
+        competitors with no extra or hidden charges
+      title: Affordable Rates
+    - icon: /assets/images/upload/recommended.png
+      text: >-
+        Our translation platform is equipped to process translation projects of
+        high volume and technical nature, ensuring quick turnaround
+      title: Fast Turnaround
+    - icon: /assets/images/upload/recommended.png
+      text: >-
+        Our translation memory matches segments which have previously been
+        translated, so you are spared the hassle of paying twice.
+      title: Translation Memory
+    - icon: /assets/images/upload/recommended.png
+      text: >-
+        We offer translation services for a plethora of language pairs from
+        around the globe for a multilingual support system.
+      title: Multilingual Support
+  text: >-
+    Enable globalization for your business with our excellent quality of
+    translation services at cost-effective rates.
+  title: Why Choose Mars?
+  visible: true
+block_4:
+  visible: true
+block_5:
+  visible: true
+block_6:
+  visible: true
