--- a/_data/pages/legal.yml
+++ b/_data/pages/legal.yml
@@ -2,48 +2,54 @@ block_1:
   background_image: /assets/images/upload/d923dbbf84f549bb2d91ba8cf91461a8.jpg
   color_overlay: 'rgba(50, 50, 50, 0.5)'
   text: >-
-    Get access to international markets with fast and accurate translation
-    services at the most affordable rates
+    As experts in Vietnamese, our certified legal translators and reviewers will
+    accurately translate sensitive legal materials into your desired language.
   title: Expert Translation Services
   visible: true
 block_2:
   background_image: ''
   color_overlay: 'rgba(50, 50, 50, 0)'
   items:
-    - icon: /assets/images/upload/recommended.png
+    - icon: /assets/images/upload/img_417598.png
       text: >-
-        Not only are our experts adept at handling lengthy translations, they
-        also execute them in due time and fast turnarounds
-      title: Certified Linguists
-    - icon: /assets/images/upload/recommended.png
+        Whether you’re a big corporation or small business, your contracts must
+        be translated accurately to ensure that all parties involved fully
+        understand what is being agreed upon.
+      title: Contract
+    - icon: >-
+        /assets/images/upload/4137121-health-evaluate-svg-png-icon-free-download-168769-evaluates-png-888_981_preview.png
       text: >-
-        Our translation platform features quality re-assessments and checks to
-        ensure consistent and top-quality of services
-      title: Excellent Quality
-    - icon: /assets/images/upload/recommended.png
+        Most people may skip reading the Terms and Conditions online, but that
+        doesn’t mean you should skip accurately translating them. It’s an
+        important legal document that can have many serious implications.
+      title: Term and Conditions
+    - icon: /assets/images/upload/img_517072.png
       text: >-
-        Our transparent and affordable translation rates are the lowest among
-        competitors with no extra or hidden charges
-      title: Affordable Rates
-    - icon: /assets/images/upload/recommended.png
+        In order to do business anywhere, you need the appropriate permits and
+        licenses. When you’re conducting business across borders, getting an
+        accurate translation of permits is imperative.
+      title: Permits/ Licenses
+    - icon: /assets/images/upload/img_517072.png
       text: >-
         Our translation platform is equipped to process translation projects of
         high volume and technical nature, ensuring quick turnaround
-      title: Fast Turnaround
-    - icon: /assets/images/upload/recommended.png
+      title: Policies & GDPR
+    - icon: /assets/images/upload/rimg_402130.png
       text: >-
-        Our translation memory matches segments which have previously been
-        translated, so you are spared the hassle of paying twice.
-      title: Translation Memory
-    - icon: /assets/images/upload/recommended.png
+        No matter the service, no matter the language, our certified and
+        experienced translators will ensure that your service agreements are
+        coherent to all parties involved.
+      title: Service Agreements
+    - icon: /assets/images/upload/img_310481.png
       text: >-
-        We offer translation services for a plethora of language pairs from
-        around the globe for a multilingual support system.
-      title: Multilingual Support
+        Intellectual property protection is no joke. With our professional legal
+        translation services, you can trust that your trademarks and copyrights
+        will be understood in Vietnamese.
+      title: Trademarks & Copyrights
   text: >-
     Enable globalization for your business with our excellent quality of
     translation services at cost-effective rates.
-  title: Why Choose Mars?
+  title: Which Legal Documents Do We Translate?
   visible: true
 block_3:
   background_image: ''
