Update Website Pages “legal_page_information”

--- a/_data/pages/legal.yml
+++ b/_data/pages/legal.yml
@@ -46,9 +46,7 @@ block_2:
         translation services, you can trust that your trademarks and copyrights
         will be understood in Vietnamese.
       title: Trademarks & Copyrights
-  text: >-
-    Enable globalization for your business with our excellent quality of
-    translation services at cost-effective rates.
+  text: ''
   title: Which Legal Documents Do We Translate?
   visible: true
 block_3:
