Update Website  Common Information “header_information”

--- a/_data/header.yml
+++ b/_data/header.yml
@@ -5,7 +5,7 @@ extra_nav:
   right:
     - link: /blog
       title: Blog
-    - link: '#'
+    - link: /contact
       title: Contact Us
     - link: '#'
       title: Support
