Update Website  Common Information “kick_start”

--- a/_data/pages/kick_start.yml
+++ b/_data/pages/kick_start.yml
@@ -7,8 +7,8 @@ block_2:
   background_image: ''
   color_overlay: 'rgba(50, 50, 50, 0)'
   text: >-
-    Since our startup, two decades back, we have been getting better and better
-    only!
+    Since our startup, over those years, we strive to provide the best services
+    to our customer every single day!
   title: Customers Feedback
   visible: true
 block_3:
