Update Website Pages “about_page_information”

--- a/_data/pages/about.yml
+++ b/_data/pages/about.yml
@@ -124,11 +124,9 @@ block_8:
   text: >-
     Our vision is to affirm the position of Vietnamese People in the world and
     to help people around the world come close together by breaking their
-    languages barriers. 
-
-
-    With that such great ambition, JNDC - Translation starts at providing our
-    high-qualified Vietnamese Translation Services which we are most confident.
+    languages barriers. <br/>With that such great ambition, JNDC - Translation
+    starts at providing our high-qualified Vietnamese Translation Services which
+    we are most confident.
   title: OUR VISION
   visible: true
 block_9:
