--- a/_data/pages/about.yml
+++ b/_data/pages/about.yml
@@ -48,17 +48,16 @@ block_4:
   color_overlay: 'rgba(50, 50, 50, 0)'
   items:
     - icon: /assets/images/upload/heart_font_awesome.svg.png
-      text: We put our heart in every project that we do
-      title: ''
+      text: >-
+        We put our heart in every word, every sentence, every page and every
+        project that we do
+      title: Our Heart in What we do
     - icon: /assets/images/upload/987-200.png
       text: We strict to provide the best translation services
-      title: ''
+      title: 'Provide The Best Services '
     - icon: /assets/images/upload/7383-200.png
       text: We strict to provide the fastest turnaround-time
-      title: ''
-    - icon: /assets/images/upload/recommended.png
-      text: 'Transparent price <br/>No Minimum Charge, no rush fees, Save up to 16%'
-      title: Saving
+      title: Fast Turnaround Time
   text: ''
   title: WHAT DO WE DO?
   visible: true
