Update Website Pages “about_page_information”

--- a/_data/pages/about.yml
+++ b/_data/pages/about.yml
@@ -53,10 +53,14 @@ block_4:
         project that we do
       title: Our Heart in What we do
     - icon: /assets/images/upload/987-200.png
-      text: We strict to provide the best translation services
+      text: >-
+        We strive to provide the best services by our rich experience
+        translation experts to our customers.
       title: 'Provide The Best Services '
     - icon: /assets/images/upload/7383-200.png
-      text: We strict to provide the fastest turnaround-time
+      text: >-
+        We make the best effort to complete your project as fast as possible
+        with the excellent quality.
       title: Fast Turnaround Time
   text: ''
   title: WHAT DO WE DO?
